# reader

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: docker.yml
src/: epub.rs  main.rs
static/: app.css  app.js  index.html  reader-cache.js  reader.html  reader.js  router.js
