[package]
name = "rust-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
axum = { version = "0.8.9", features = ["multipart"] }
encoding_rs = "0.8"
hex = "0.4.3"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
